fix: corrige bugs criticos e aplica melhorias de boas praticas
- JWT: filtro de autorizacao passa a validar com o segredo configurado
  (antes usava "my-secret" hardcoded, causando 403 em producao)
- Tratamento de erros: handlers do ResponseEntityExceptionHandler agora
  sobrescrevem corretamente (HttpStatusCode) e voltam a ser aplicados
- Agenda: conflito de horario considera apenas sobreposicao real,
  permitindo agendamentos consecutivos (back-to-back)
- Corrige NPE potencial em AgendaService.delete e a query de agendamentos
  do dia (passa a cobrir o dia inteiro)
- Ativa auditoria JPA (@CreatedDate) em Patient e Agenda e remove a
  atribuicao manual de data nos services
- Migra @Transactional para o do Spring com readOnly nas leituras
- Limpezas: nomes de handlers, remocao de codigo morto, mappers e
  pom.xml alinhado ao BOM do Spring Boot
- Testes: PostgresqlTest agora executa de fato via Testcontainers; novos
  testes do filtro JWT e do AgendaController; corrige teste de CPF duplicado